--- a/wrangler.toml
+++ b/wrangler.toml
@@ -30,6 +30,16 @@ zone_name = "investigaree.com.br"
 [site]
 bucket = "./dist"
 
+# Browser Rendering (habilitar no dashboard)
+[browser]
+binding = "BROWSER"
+
+# R2 Storage (habilitar no dashboard e criar bucket "investigaree-reports")
+# Descomentar após criar o bucket:
+# [[r2_buckets]]
+# binding = "R2"
+# bucket_name = "investigaree-reports"
+
 # Environment variables (não-sensíveis)
 [vars]
 ENVIRONMENT = "production"
