feat: Configure R2 storage with r2storage bucket
- Uncomment R2 configuration in wrangler.toml
- Set bucket_name to r2storage
- R2 tokens saved securely in .env.automation (not committed)

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -34,11 +34,10 @@ bucket = "./dist"
 [browser]
 binding = "BROWSER"
 
-# R2 Storage (habilitar no dashboard e criar bucket "investigaree-reports")
-# Descomentar após criar o bucket:
-# [[r2_buckets]]
-# binding = "R2"
-# bucket_name = "investigaree-reports"
+# R2 Storage (habilitado e bucket criado)
+[[r2_buckets]]
+binding = "R2"
+bucket_name = "r2storage"
 
 # Environment variables (não-sensíveis)
 [vars]
