fix: Add static assets configuration to wrangler

--- a/investigaree/wrangler.jsonc
+++ b/investigaree/wrangler.jsonc
@@ -3,6 +3,11 @@
   "main": ".open-next/worker.js",
   "compatibility_date": "2025-04-01",
   "compatibility_flags": ["nodejs_compat"],
+  "assets": {
+    "directory": ".open-next/assets",
+    "binding": "ASSETS",
+    "run_worker_first": true
+  },
   "routes": [
     { "pattern": "investigaree.com.br/*", "zone_name": "investigaree.com.br" },
     { "pattern": "www.investigaree.com.br/*", "zone_name": "investigaree.com.br" }
