[A1] Final deploy - Pages + Worker updated with custom domains
Pages Deploy:
- URL: https://investigaree.com.br + https://www.investigaree.com.br
- Deployment ID: 03712d5c
- 77 pages, 759 files (658 new, 101 cached)
- All latest commits included

Worker Deploy:
- URL: https://api.investigaree.com.br
- Version ID: 8e09d26e
- D1 Database connected
- Health check: OK
- Custom domain route configured

Both deployments tested and verified ✅

--- a/backend/workers/api/wrangler.toml
+++ b/backend/workers/api/wrangler.toml
@@ -3,6 +3,11 @@ main = "src/index.ts"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
+# Routes - Custom subdomain for API
+routes = [
+  { pattern = "api.investigaree.com.br/*", zone_name = "investigaree.com.br" }
+]
+
 # D1 Database binding
 [[d1_databases]]
 binding = "DB"
@@ -24,3 +29,7 @@ ENVIRONMENT = "production"
 # SERPRO_CNPJ_CONSUMER_KEY = "secret"
 # SERPRO_CNPJ_CONSUMER_SECRET = "secret"
 # ... (mais 7 APIs)
+
+# Cron Triggers - Processamento de jobs em background
+[triggers]
+crons = ["0 */1 * * *"]  # A cada 1 hora
