--- a/investigaree/package.json
+++ b/investigaree/package.json
@@ -47,6 +47,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-window": "^2.2.3",
     "reading-time": "^1.5.0",
     "rehype-highlight": "^7.0.2",
     "rehype-slug": "^6.0.0",
@@ -58,6 +59,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@opennextjs/cloudflare": "^1.13.1",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
